--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "baseUrl": "./",
     "paths": {
       "*": ["src/*"],
-      "config": ["config"]
+      "config": ["config"],
+      "assets": ["assets"]
     }
   },
   "exclude": ["node_modules"]
