--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "parse": "^1.9.2",
     "path-to-regexp": "^6.2.0",
     "prop-types": "^15.6.0",
+    "query-string": "^6.13.6",
     "re-reselect": "^2.3.0",
     "react": "16.13.1",
     "react-native": "0.63.4",
