--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-native-htmlview": "^0.16.0",
     "react-native-image-picker": "^1.1.0",
     "react-native-intercom": "^15.0.0",
+    "react-native-keyboard-accessory": "^0.1.14",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-mixpanel": "^1.2.0",
     "react-native-onesignal": "^3.9.3",
