--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@flyerhq/react-native-keyboard-accessory-view": "^2.1.0",
     "@invertase/react-native-apple-authentication": "^2.1.0",
     "@react-native-async-storage/async-storage": "^1.13.2",
     "@react-native-community/clipboard": "^1.5.1",
@@ -59,7 +60,6 @@
     "react-native-htmlview": "^0.16.0",
     "react-native-image-picker": "^1.1.0",
     "react-native-intercom": "^15.0.0",
-    "react-native-keyboard-accessory": "^0.1.14",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-mixpanel": "^1.2.0",
     "react-native-onesignal": "^3.9.3",
