--- a/package.json
+++ b/package.json
@@ -141,7 +141,7 @@
     ],
     "timers": "fake",
     "transformIgnorePatterns": [
-      "node_modules/(?!(jest-)?react-native|@react-native-community|@react-navigation|rn-round-checkbox|@invertase)"
+      "node_modules/(?!(jest-)?react-native|@react-native-community|@react-navigation|rn-round-checkbox|@invertase|@flyerhq\/react-native-keyboard-accessory-view)"
     ]
   },
   "standard": {
