Get iOS build / CocoaPods reset and working

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -35,6 +35,11 @@ target 'HyloReactNative' do
     #     config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '10.0'
     #   end
     # end
+    installer.pods_project.targets.each do |target|
+      target.build_configurations.each do |config|
+        config.build_settings.delete 'ARCHS'
+      end
+    end
   end
 end
 
