--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@react-native-community/google-signin": "^4.0.3",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/netinfo": "^5.9.9",
+    "@react-native-picker/picker": "^1.13.0",
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/compat": "^5.3.10",
     "@react-navigation/drawer": "^5.11.4",
