--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "@react-native-community/google-signin": "^4.0.3",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/netinfo": "^5.9.9",
-    "@react-native-picker/picker": "^1.13.0",
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/compat": "^5.3.10",
     "@react-navigation/drawer": "^5.12.4",
@@ -65,6 +64,7 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-mixpanel": "^1.2.0",
     "react-native-onesignal": "^4.0.3",
+    "react-native-picker-select": "^8.0.4",
     "react-native-prompt-android": "^1.0.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-restart": "^0.0.17",
