--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@react-native-community/clipboard": "^1.5.1",
     "@react-native-google-signin/google-signin": "^6.0.1",
     "@react-native-community/masked-view": "^0.1.10",
-    "@react-native-community/netinfo": "^5.9.9",
+    "@react-native-community/netinfo": "^6.0.1",
     "@react-native-community/picker": "^1.8.1",
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/compat": "^5.3.10",
@@ -64,6 +64,7 @@
     "react-native-intercom": "^21.1.0",
     "react-native-linear-gradient": "^2.5.6",
     "mixpanel-react-native": "^1.3.1",
+    "react-native-bootsplash": "^3.2.4",
     "react-native-onesignal": "^4.2.0",
     "react-native-picker-select": "^8.0.4",
     "react-native-prompt-android": "^1.0.0",
