add back assocaited domains for deep linking in production

--- a/ios/HyloReactNative/HyloReactNativeRelease.entitlements
+++ b/ios/HyloReactNative/HyloReactNativeRelease.entitlements
@@ -8,6 +8,11 @@
 	<array>
 		<string>Default</string>
 	</array>
+	<key>com.apple.developer.associated-domains</key>
+	<array>
+		<string>applinks:hylo.com</string>
+		<string>applinks:www.hylo.com</string>
+	</array>
 	<key>com.apple.developer.icloud-container-identifiers</key>
 	<array>
 		<string>iCloud.com.hylo.hyloA</string>
