--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "react-native-device-info": "^6.0.3",
     "react-native-document-picker": "^2.0.0",
     "react-native-fbsdk-next": "^4.3.0",
-    "react-native-flipper": "0.93.0",
+    "react-native-flipper": "^0.105.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-htmlview": "^0.16.0",
     "react-native-image-picker": "^1.1.0",
