--- a/ios/Gemfile
+++ b/ios/Gemfile
@@ -1,4 +1,4 @@
 # NOTE: Best to install Ruby via Homebrew for Mac M1 (https://stackoverflow.com/a/66556339)
 source "https://rubygems.org"
 gem "fastlane"
-gem "cocoapods"
+gem "cocoapods", "1.11.0"
