--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@react-navigation/compat": "^5.3.20",
     "@react-navigation/drawer": "^6.1.4",
     "@react-navigation/elements": "^1.1.0",
+    "@react-navigation/material-top-tabs": "^6.0.4",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
     "@sentry/react-native": "^2.6.2",
@@ -66,6 +67,7 @@
     "react-native-htmlview": "^0.16.0",
     "react-native-image-picker": "^4.1.1",
     "react-native-intercom": "^21.1.0",
+    "react-native-keyboard-spacer": "^0.4.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-onesignal": "^4.3.0",
     "react-native-pager-view": "^5.4.1",
@@ -76,11 +78,10 @@
     "react-native-root-toast": "^3.2.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.6.0",
-    "react-native-tab-navigator": "^0.3.4",
     "react-native-tab-view": "^3.1.1",
     "react-native-triangle": "^0.0.9",
     "react-native-vector-icons": "^7.1.0",
-    "react-native-webview": "^9.4.0",
+    "react-native-webview": "^11.14.0",
     "react-native-zss-rich-text-editor": "Hylozoic/react-native-zss-rich-text-editor#merge-jb-updates-for-rn-0.61.5",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
