--- a/package.json
+++ b/package.json
@@ -91,8 +91,8 @@
     "redux-promise": "^0.6.0",
     "reselect": "^4.0.0",
     "rn-round-checkbox": "^1.0.0",
-    "sails.io.js": "1.1.10",
-    "socket.io-client": "^2.0.3",
+    "sails.io.js": "^1.2.1",
+    "socket.io-client": "2.3.1",
     "striptags": "~2",
     "tinycolor2": "^1.4.1",
     "url": "^0.11.0"
