--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
 
     <application
       android:name=".MainApplication"
@@ -47,14 +49,5 @@
           <data android:scheme="hyloapp" />
         </intent-filter>
       </activity>
-      <activity android:name=".OneSignalConfigActivity" android:launchMode="singleTop" />
-        <service
-          android:name="com.robinpowered.react.Intercom.IntercomIntentService"
-          android:exported="false">
-          <intent-filter
-              android:priority="999">
-              <action android:name="com.google.android.c2dm.intent.RECEIVE"/>
-          </intent-filter>
-        </service>
     </application>
 </manifest>
