--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-native-document-picker": "^6.1.1",
     "react-native-fbsdk-next": "^4.6.0",
     "react-native-flipper": "^0.105.0",
+    "react-native-geolocation-service": "^5.3.0-beta.3",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-htmlview": "^0.16.0",
     "react-native-image-picker": "^4.1.1",
