--- a/package.json
+++ b/package.json
@@ -103,9 +103,9 @@
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "@react-navigation/devtools": "^6.0.1",
-    "@testing-library/jest-native": "^3.4.3",
-    "@testing-library/react-native": "^7.1.0",
-    "babel-jest": "^26.6.3",
+    "@testing-library/jest-native": "^4.0.2",
+    "@testing-library/react-native": "^8.0.0",
+    "babel-jest": "^27.3.1",
     "babel-plugin-inline-dotenv": "^1.5.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-remove-style": "^0.1.0",
@@ -115,9 +115,8 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "eslint": "7.14.0",
     "faker": "^4.1.0",
-    "jest": "^26.6.3",
-    "jest-environment-node": "^26.6.2",
-    "jest-simple-reporter": "^0.1.0",
+    "jest": "^27.3.1",
+    "jest-environment-node": "^27.3.1",
     "metro-react-native-babel-preset": "^0.66.0",
     "react-native-clean-project": "^3.6.4",
     "react-native-codegen": "^0.0.7",
@@ -159,6 +158,7 @@
     "parser": "babel-eslint",
     "global": [
       "__DEV__",
+      "window",
       "afterAll",
       "afterEach",
       "alert",
