--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-native-autocomplete-input": "^3.5.0",
     "react-native-background-timer": "^2.4.1",
     "react-native-bootsplash": "^3.2.4",
+    "react-native-confirmation-code-field": "^7.2.0",
     "react-native-date-picker": "^3.2.10",
     "react-native-device-info": "^8.4.0",
     "react-native-document-picker": "^6.1.1",
