--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "redux-flipper": "^2.0.0",
     "redux-logger": "^3.0.6",
     "redux-orm": "^0.16.2",
+    "redux-persist": "^6.0.0",
     "redux-promise": "^0.6.0",
     "reselect": "^4.0.0",
     "rn-round-checkbox": "^1.0.0",
