--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "lodash": "^4.17.13",
     "mixpanel-react-native": "^1.3.1",
     "moment": "^2.27.0",
+    "moment-timezone": "^0.5.34",
     "path-to-regexp": "^6.2.0",
     "prop-types": "^15.6.0",
     "query-string": "^6.13.6",
