--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "react-native-tab-view": "^3.1.1",
     "react-native-triangle": "^0.0.9",
     "react-native-vector-icons": "^7.1.0",
-    "react-native-webview": "^11.15.0",
+    "react-native-webview": "11.14.3",
     "react-native-zss-rich-text-editor": "Hylozoic/react-native-zss-rich-text-editor#merge-jb-updates-for-rn-0.61.5",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
