Add staging server to associated domains

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -47,6 +47,8 @@
           <data android:scheme="https" android:host="hylo.com" />
           <data android:scheme="http" android:host="www.hylo.com" />
           <data android:scheme="https" android:host="www.hylo.com" />
+          <data android:scheme="http" android:host="staging.hylo.com" />
+          <data android:scheme="https" android:host="staging.hylo.com" />
           <data android:scheme="hyloapp" android:host="home" />
           <data android:scheme="hyloapp" />
         </intent-filter>
