--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@sentry/react-native": "^2.6.2",
     "cheerio": "0.22.0",
     "ent": "^2.2.0",
+    "graphql-tag": "^2.12.6",
     "html-to-text": "^8.1.0",
     "hylo-utils": "https://github.com/Hylozoic/hylo-utils#2ff4926",
     "js-htmlencode": "^0.3.0",
