Upgrade Flipper Version

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@sentry/react-native": "^2.6.2",
     "cheerio": "0.22.0",
     "ent": "^2.2.0",
+    "graphql": "^14.2.1",
     "graphql-tag": "^2.12.6",
     "html-to-text": "^8.1.0",
     "hylo-utils": "https://github.com/Hylozoic/hylo-utils#2ff4926",
@@ -67,7 +68,7 @@
     "react-native-device-info": "^8.4.0",
     "react-native-document-picker": "^6.1.1",
     "react-native-fbsdk-next": "^4.6.0",
-    "react-native-flipper": "^0.105.0",
+    "react-native-flipper": "^0.131.0",
     "react-native-geolocation-service": "^5.3.0-beta.3",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-htmlview": "^0.16.0",
