--- a/ios/Podfile
+++ b/ios/Podfile
@@ -25,7 +25,7 @@ target 'HyloReactNative' do
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable the next line.
-  use_flipper!({ 'Flipper' => '0.105.0', 'Flipper-DoubleConversion' => '1.1.7' })
+  use_flipper!({ 'Flipper' => '0.131.0' })
 
   post_install do |installer|
     react_native_post_install(installer)
