--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "query-string": "^6.13.6",
     "re-reselect": "^4.0.0",
     "react": "17.0.2",
-    "react-native": "^0.65.1",
+    "react-native": "^0.67.1",
     "react-native-autocomplete-input": "^3.5.0",
     "react-native-background-timer": "^2.4.1",
     "react-native-bootsplash": "^3.2.4",
@@ -68,7 +68,6 @@
     "react-native-device-info": "^8.4.0",
     "react-native-document-picker": "^6.1.1",
     "react-native-fbsdk-next": "^4.6.0",
-    "react-native-flipper": "^0.131.0",
     "react-native-geolocation-service": "^5.3.0-beta.3",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-htmlview": "^0.16.0",
@@ -76,22 +75,21 @@
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-onesignal": "^4.3.0",
-    "react-native-pager-view": "^5.4.1",
+    "react-native-pager-view": "^5.4.9",
     "react-native-picker-select": "^8.0.4",
     "react-native-prompt-android": "^1.0.0",
-    "react-native-reanimated": "^1.13.3",
+    "react-native-reanimated": "2.3.0-beta.4",
     "react-native-restart": "^0.0.22",
     "react-native-root-toast": "^3.2.1",
     "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.6.0",
+    "react-native-screens": "^3.10.2",
     "react-native-tab-view": "^3.1.1",
     "react-native-triangle": "^0.0.9",
     "react-native-vector-icons": "^7.1.0",
-    "react-native-webview": "11.14.3",
+    "react-native-webview": "^11.17.1",
     "react-native-zss-rich-text-editor": "Hylozoic/react-native-zss-rich-text-editor#merge-jb-updates-for-rn-0.61.5",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
-    "redux-flipper": "^2.0.0",
     "redux-logger": "^3.0.6",
     "redux-orm": "^0.16.2",
     "redux-persist": "^6.0.0",
@@ -123,7 +121,7 @@
     "faker": "^4.1.0",
     "jest": "^27.3.1",
     "jest-environment-node": "^27.3.1",
-    "metro-react-native-babel-preset": "^0.66.0",
+    "metro-react-native-babel-preset": "^0.66.2",
     "react-native-clean-project": "^3.6.4",
     "react-native-codegen": "^0.0.7",
     "react-native-version": "^4.0.0",
