--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "ios:testflight": "cd ios && bundle exec fastlane beta",
     "ios:qa": "cd ios && bundle exec fastlane qa",
     "lint": "standard",
-    "postinstall": "(find node_modules -type f -name .babelrc | grep -v /react-native/ | xargs rm) || true",
+    "postinstall": "./scripts/postinstall.sh",
     "postversion": "react-native-version",
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest",
+    "test": "node scripts/test.js",
     "clean": "react-native clean-project",
     "clean-auto": "react-native clean-project-auto"
   },
@@ -107,9 +107,9 @@
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "@react-navigation/devtools": "^6.0.1",
-    "@testing-library/jest-native": "^4.0.2",
-    "@testing-library/react-native": "^8.0.0",
-    "babel-jest": "^27.3.1",
+    "@testing-library/jest-native": "^4.0.4",
+    "@testing-library/react-native": "^9.0.0",
+    "babel-jest": "^27.4.6",
     "babel-plugin-inline-dotenv": "^1.5.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-remove-style": "^0.1.0",
@@ -119,9 +119,13 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "eslint": "7.14.0",
     "faker": "^4.1.0",
-    "jest": "^27.3.1",
-    "jest-environment-node": "^27.3.1",
+    "jest": "^27.4.7",
+    "jest-environment-node": "^27.4.6",
+    "jest-serializer-graphql": "^1.0.0",
+    "jest-watch-typeahead": "^1.0.0",
     "metro-react-native-babel-preset": "^0.66.2",
+    "patch-package": "^6.4.7",
+    "postinstall-postinstall": "^2.1.0",
     "react-native-clean-project": "^3.6.4",
     "react-native-codegen": "^0.0.7",
     "react-native-version": "^4.0.0",
@@ -150,12 +154,22 @@
       "json",
       "lcov"
     ],
+    "snapshotSerializers": [
+      "jest-serializer-graphql"
+    ],
     "moduleDirectories": [
       "node_modules",
       "src"
     ],
+    "testPathIgnorePatterns": [
+      "<rootDir>[/\\\\](android|ios|node_modules|scripts|assets|)[/\\\\]"
+    ],
     "transformIgnorePatterns": [
       "node_modules/(?!(jest-)?@react-native|react-native|@react-native-community|@react-navigation|rn-round-checkbox|@invertase|@flyerhq/react-native-keyboard-accessory-view|@react-native-picker)"
+    ],
+    "watchPlugins": [
+      "jest-watch-typeahead/filename",
+      "jest-watch-typeahead/testname"
     ]
   },
   "standard": {
