--- a/package.json
+++ b/package.json
@@ -20,21 +20,20 @@
     "postversion": "react-native-version",
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "node scripts/test.js",
-    "clean": "react-native clean-project",
+    "clean": "react-native-clean-project",
     "clean-auto": "react-native clean-project-auto"
   },
   "dependencies": {
-    "@flyerhq/react-native-keyboard-accessory-view": "^2.3.2",
-    "@hookstate/core": "^3.0.8",
+    "@flyerhq/react-native-keyboard-accessory-view": "^2.4.0",
     "@intercom/intercom-react-native": "^1.0.5",
     "@invertase/react-native-apple-authentication": "^2.1.5",
-    "@react-native-async-storage/async-storage": "^1.15.7",
+    "@react-native-async-storage/async-storage": "^1.15.17",
     "@react-native-community/clipboard": "^1.5.1",
-    "@react-native-community/hooks": "^2.6.0",
-    "@react-native-community/masked-view": "^0.1.10",
-    "@react-native-community/netinfo": "^6.0.2",
+    "@react-native-community/hooks": "^2.8.1",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/netinfo": "^7.1.9",
     "@react-native-community/picker": "^1.8.1",
-    "@react-native-google-signin/google-signin": "7.0.0-alpha.1",
+    "@react-native-google-signin/google-signin": "^7.0.4",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/compat": "^5.3.20",
     "@react-navigation/drawer": "^6.1.4",
@@ -45,17 +44,17 @@
     "@sentry/react-native": "^2.6.2",
     "cheerio": "0.22.0",
     "ent": "^2.2.0",
-    "graphql": "^14.2.1",
+    "graphql": "^16.3.0",
     "graphql-tag": "^2.12.6",
     "html-to-text": "^8.1.0",
     "hylo-utils": "https://github.com/Hylozoic/hylo-utils#2ff4926",
     "js-htmlencode": "^0.3.0",
-    "lodash": "^4.17.13",
-    "mixpanel-react-native": "^1.3.1",
-    "moment": "^2.27.0",
+    "lodash": "^4.17.21",
+    "mixpanel-react-native": "^1.3.7",
+    "moment": "^2.29.1",
     "moment-timezone": "^0.5.34",
     "path-to-regexp": "^6.2.0",
-    "prop-types": "^15.6.0",
+    "prop-types": "^15.8.1",
     "query-string": "^6.13.6",
     "re-reselect": "^4.0.0",
     "react": "17.0.2",
@@ -63,23 +62,23 @@
     "react-native-autocomplete-input": "^3.5.0",
     "react-native-background-timer": "^2.4.1",
     "react-native-bootsplash": "^3.2.4",
-    "react-native-confirmation-code-field": "^7.2.0",
-    "react-native-date-picker": "^3.2.10",
-    "react-native-device-info": "^8.4.0",
-    "react-native-document-picker": "^6.1.1",
+    "react-native-confirmation-code-field": "^7.3.0",
+    "react-native-date-picker": "^4.1.3",
+    "react-native-device-info": "^8.4.8",
+    "react-native-document-picker": "^8.0.0",
     "react-native-fbsdk-next": "^4.6.0",
-    "react-native-geolocation-service": "^5.3.0-beta.3",
+    "react-native-geolocation-service": "^5.3.0-beta.4",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-htmlview": "^0.16.0",
-    "react-native-image-picker": "^4.1.1",
+    "react-native-image-picker": "^4.7.3",
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-linear-gradient": "^2.5.6",
-    "react-native-onesignal": "^4.3.0",
+    "react-native-onesignal": "^4.3.5",
     "react-native-pager-view": "^5.4.9",
     "react-native-picker-select": "^8.0.4",
-    "react-native-prompt-android": "^1.0.0",
+    "react-native-prompt-android": "^1.1.0",
     "react-native-reanimated": "2.3.0-beta.4",
-    "react-native-restart": "^0.0.22",
+    "react-native-restart": "^0.0.23",
     "react-native-root-toast": "^3.2.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
@@ -99,7 +98,7 @@
     "sails.io.js": "^1.2.1",
     "socket.io-client": "2.3.1",
     "striptags": "~2",
-    "tinycolor2": "^1.4.1",
+    "tinycolor2": "^1.4.2",
     "url": "^0.11.0"
   },
   "devDependencies": {
@@ -110,29 +109,27 @@
     "@testing-library/jest-native": "^4.0.4",
     "@testing-library/react-native": "^9.0.0",
     "babel-jest": "^27.4.6",
-    "babel-plugin-inline-dotenv": "^1.5.0",
+    "babel-plugin-inline-dotenv": "^1.6.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-remove-style": "^0.1.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
-    "babel-plugin-transform-remove-console": "^6.9.0",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "babel-plugin-transform-runtime": "^6.23.0",
     "eslint": "7.14.0",
-    "faker": "^4.1.0",
     "jest": "^27.4.7",
     "jest-environment-node": "^27.4.6",
     "jest-serializer-graphql": "^1.0.0",
     "jest-watch-typeahead": "^1.0.0",
-    "metro-react-native-babel-preset": "^0.66.2",
+    "metro-react-native-babel-preset": "^0.67.0",
     "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
-    "react-native-clean-project": "^3.6.4",
-    "react-native-codegen": "^0.0.7",
+    "react-native-clean-project": "^4.0.0",
     "react-native-version": "^4.0.0",
     "react-test-renderer": "17.0.2",
     "remote-redux-devtools": "^0.5.16",
     "reselect-tools": "^0.0.6",
-    "standard": "^16.0.3",
+    "standard": "^16.0.4",
     "timezone-mock": "^0.0.6",
     "uri-scheme": "^1.0.57",
     "validator": "^8.0.0"
