--- a/package.json
+++ b/package.json
@@ -42,11 +42,12 @@
     "@react-navigation/native": "^6.0.7",
     "@react-navigation/stack": "^6.1.0",
     "@sentry/react-native": "^2.6.2",
-    "cheerio": "0.22.0",
+    "cheerio": "1.0.0-rc.10",
     "ent": "^2.2.0",
     "graphql": "^16.3.0",
     "graphql-tag": "^2.12.6",
     "html-to-text": "^8.1.0",
+    "hylo-shared": "^1.4.0",
     "hylo-utils": "https://github.com/Hylozoic/hylo-utils#2ff4926",
     "js-htmlencode": "^0.3.0",
     "lodash": "^4.17.21",
