--- a/package.json
+++ b/package.json
@@ -31,24 +31,23 @@
     "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/hooks": "^2.8.1",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-community/netinfo": "^7.1.9",
+    "@react-native-community/netinfo": "^7.1.10",
     "@react-native-community/picker": "^1.8.1",
     "@react-native-google-signin/google-signin": "^7.0.4",
-    "@react-navigation/bottom-tabs": "^6.1.0",
+    "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/compat": "^5.3.20",
-    "@react-navigation/drawer": "^6.2.0",
-    "@react-navigation/elements": "^1.3.0",
-    "@react-navigation/material-top-tabs": "^6.1.0",
-    "@react-navigation/native": "^6.0.7",
-    "@react-navigation/stack": "^6.1.0",
-    "@sentry/react-native": "^2.6.2",
+    "@react-navigation/drawer": "^6.3.1",
+    "@react-navigation/elements": "^1.3.1",
+    "@react-navigation/material-top-tabs": "^6.1.1",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/stack": "^6.1.1",
+    "@sentry/react-native": "^3.2.13",
     "cheerio": "1.0.0-rc.10",
     "ent": "^2.2.0",
     "graphql": "^16.3.0",
     "graphql-tag": "^2.12.6",
     "html-to-text": "^8.1.0",
-    "hylo-shared": "^1.4.0",
-    "hylo-utils": "https://github.com/Hylozoic/hylo-utils#2ff4926",
+    "hylo-shared": "1.5.3",
     "js-htmlencode": "^0.3.0",
     "lodash": "^4.17.21",
     "mixpanel-react-native": "^1.3.7",
@@ -56,7 +55,7 @@
     "moment-timezone": "^0.5.34",
     "path-to-regexp": "^6.2.0",
     "prop-types": "^15.8.1",
-    "query-string": "^6.13.6",
+    "query-string": "^7.1.1",
     "re-reselect": "^4.0.0",
     "react": "17.0.2",
     "react-native": "^0.67.2",
@@ -65,7 +64,7 @@
     "react-native-bootsplash": "^3.2.4",
     "react-native-confirmation-code-field": "^7.3.0",
     "react-native-date-picker": "^4.1.3",
-    "react-native-device-info": "^8.4.8",
+    "react-native-device-info": "^8.4.9",
     "react-native-document-picker": "^8.0.0",
     "react-native-fbsdk-next": "^4.6.0",
     "react-native-geolocation-service": "^5.3.0-beta.4",
@@ -74,12 +73,12 @@
     "react-native-image-picker": "^4.7.3",
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-linear-gradient": "^2.5.6",
-    "react-native-onesignal": "^4.3.5",
+    "react-native-onesignal": "^4.3.6",
     "react-native-pager-view": "^5.4.9",
     "react-native-picker-select": "^8.0.4",
     "react-native-prompt-android": "^1.1.0",
     "react-native-reanimated": "2.3.0-beta.4",
-    "react-native-restart": "^0.0.23",
+    "react-native-restart": "^0.0.24",
     "react-native-root-toast": "^3.2.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
@@ -88,7 +87,7 @@
     "react-native-vector-icons": "^7.1.0",
     "react-native-webview": "^11.17.1",
     "react-native-zss-rich-text-editor": "Hylozoic/react-native-zss-rich-text-editor#merge-jb-updates-for-rn-0.61.5",
-    "react-redux": "^7.2.2",
+    "react-redux": "^7.2.6",
     "redux": "^4.0.5",
     "redux-orm": "^0.16.2",
     "redux-persist": "^6.0.0",
@@ -102,13 +101,13 @@
     "url": "^0.11.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
+    "@babel/core": "^7.17.0",
+    "@babel/runtime": "^7.17.0",
+    "@react-native-community/eslint-config": "^3.0.1",
     "@react-navigation/devtools": "^6.0.5",
     "@testing-library/jest-native": "^4.0.4",
     "@testing-library/react-native": "^9.0.0",
-    "babel-jest": "^27.4.6",
+    "babel-jest": "^27.5.0",
     "babel-plugin-inline-dotenv": "^1.6.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-remove-style": "^0.1.0",
@@ -117,8 +116,8 @@
     "babel-plugin-transform-remove-console": "^6.9.4",
     "babel-plugin-transform-runtime": "^6.23.0",
     "eslint": "7.14.0",
-    "jest": "^27.4.7",
-    "jest-environment-node": "^27.4.6",
+    "jest": "^27.5.0",
+    "jest-environment-node": "^27.5.0",
     "jest-serializer-graphql": "^1.0.0",
     "jest-watch-typeahead": "^1.0.0",
     "metro-react-native-babel-preset": "^0.67.0",
@@ -129,10 +128,10 @@
     "react-test-renderer": "17.0.2",
     "redux-logger": "^3.0.6",
     "remote-redux-devtools": "^0.5.16",
-    "reselect-tools": "^0.0.6",
+    "reselect-tools": "^0.0.7",
     "standard": "^16.0.4",
-    "timezone-mock": "^0.0.6",
-    "uri-scheme": "^1.0.57",
+    "timezone-mock": "^1.3.0",
+    "uri-scheme": "^1.0.112",
     "validator": "^8.0.0"
   },
   "jest": {
