--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "graphql": "^16.3.0",
     "graphql-tag": "^2.12.6",
     "html-to-text": "^8.1.0",
-    "hylo-shared": "1.5.3",
+    "hylo-shared": "^1.6.1",
     "js-htmlencode": "^0.3.0",
     "lodash": "^4.17.21",
     "mixpanel-react-native": "^1.3.7",
