--- a/package.json
+++ b/package.json
@@ -68,7 +68,6 @@
     "react-native-fbsdk-next": "^4.6.0",
     "react-native-geolocation-service": "^5.3.0-beta.4",
     "react-native-gesture-handler": "^1.10.3",
-    "react-native-htmlview": "^0.16.0",
     "react-native-image-picker": "^4.7.3",
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-linear-gradient": "^2.5.6",
@@ -77,6 +76,7 @@
     "react-native-picker-select": "^8.0.4",
     "react-native-prompt-android": "^1.1.0",
     "react-native-reanimated": "2.3.0-beta.4",
+    "react-native-render-html": "^6.3.4",
     "react-native-restart": "^0.0.24",
     "react-native-root-toast": "^3.2.1",
     "react-native-safe-area-context": "^3.3.2",
