--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "react-native-screens": "^3.10.2",
     "react-native-tab-view": "^3.1.1",
     "react-native-triangle": "^0.0.9",
+    "react-native-url-polyfill": "^1.3.0",
     "react-native-vector-icons": "^7.1.0",
     "react-native-webview": "^11.17.1",
     "react-native-zss-rich-text-editor": "Hylozoic/react-native-zss-rich-text-editor#merge-jb-updates-for-rn-0.61.5",
@@ -94,8 +95,7 @@
     "rn-round-checkbox": "^1.0.0",
     "sails.io.js": "^1.2.1",
     "socket.io-client": "2.3.1",
-    "tinycolor2": "^1.4.2",
-    "url": "^0.11.0"
+    "tinycolor2": "^1.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.17.0",
