Update and move openURL to work more closely with custom linking. Linting. Update React Testing Library setup

--- a/package.json
+++ b/package.json
@@ -46,11 +46,12 @@
     "graphql": "^16.3.0",
     "graphql-tag": "^2.12.6",
     "html-to-text": "^8.1.0",
-    "hylo-shared": "^1.6.1",
+    "hylo-shared": "^1.6.4",
     "lodash": "^4.17.21",
     "mixpanel-react-native": "^1.3.7",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.34",
+    "node-html-markdown": "^1.1.3",
     "path-to-regexp": "^6.2.0",
     "prop-types": "^15.8.1",
     "query-string": "^7.1.1",
@@ -118,6 +119,7 @@
     "jest-serializer-graphql": "^1.0.0",
     "jest-watch-typeahead": "^1.0.0",
     "metro-react-native-babel-preset": "^0.67.0",
+    "msw": "^0.38.1",
     "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
     "react-native-clean-project": "^4.0.0",
