--- a/package.json
+++ b/package.json
@@ -42,11 +42,10 @@
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/stack": "^6.1.1",
     "@sentry/react-native": "^3.2.13",
-    "cheerio": "1.0.0-rc.10",
     "graphql": "^16.3.0",
     "graphql-tag": "^2.12.6",
     "html-to-text": "^8.1.0",
-    "hylo-shared": "^1.6.4",
+    "hylo-shared": "1.6.6",
     "lodash": "^4.17.21",
     "mixpanel-react-native": "^1.3.7",
     "moment": "^2.29.1",
