--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@sentry/react-native": "^3.2.13",
     "graphql": "^16.3.0",
     "graphql-tag": "^2.12.6",
+    "html-entities": "^2.3.2",
     "html-to-text": "^8.1.0",
     "hylo-shared": "1.6.6",
     "lodash": "^4.17.21",
