--- a/package.json
+++ b/package.json
@@ -98,13 +98,14 @@
     "tinycolor2": "^1.4.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.0",
-    "@babel/runtime": "^7.17.0",
+    "@babel/core": "^7.17.3",
+    "@babel/runtime": "^7.17.2",
+    "@babel/eslint-parser": "^7.17.0",
     "@react-native-community/eslint-config": "^3.0.1",
     "@react-navigation/devtools": "^6.0.5",
     "@testing-library/jest-native": "^4.0.4",
     "@testing-library/react-native": "^9.0.0",
-    "babel-jest": "^27.5.0",
+    "babel-jest": "^27.5.1",
     "babel-plugin-inline-dotenv": "^1.6.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-remove-style": "^0.1.0",
@@ -112,7 +113,7 @@
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "eslint": "7.14.0",
+    "eslint": "8.8.0",
     "jest": "^27.5.0",
     "jest-environment-node": "^27.5.0",
     "jest-serializer-graphql": "^1.0.0",
@@ -136,7 +137,6 @@
     "preset": "react-native",
     "setupFiles": [
       "<rootDir>/config/jest/mockGlobals.js",
-      "<rootDir>/config/jest/mockError.js",
       "./node_modules/react-native-gesture-handler/jestSetup.js"
     ],
     "setupFilesAfterEnv": [
@@ -168,7 +168,7 @@
     ]
   },
   "standard": {
-    "parser": "babel-eslint",
+    "parser": "@babel/eslint-parser",
     "global": [
       "__DEV__",
       "window",
