--- a/package.json
+++ b/package.json
@@ -78,8 +78,8 @@
     "react-native-render-html": "^6.3.4",
     "react-native-restart": "^0.0.24",
     "react-native-root-toast": "^3.2.1",
-    "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.10.2",
+    "react-native-safe-area-context": "^4.1.2",
+    "react-native-screens": "^3.13.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-triangle": "^0.0.9",
     "react-native-url-polyfill": "^1.3.0",
@@ -99,8 +99,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.17.3",
-    "@babel/runtime": "^7.17.2",
     "@babel/eslint-parser": "^7.17.0",
+    "@babel/runtime": "^7.17.2",
     "@react-native-community/eslint-config": "^3.0.1",
     "@react-navigation/devtools": "^6.0.5",
     "@testing-library/jest-native": "^4.0.4",
@@ -113,7 +113,17 @@
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "eslint": "8.8.0",
+    "eslint": "7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-config-standard-jsx": "^10.0.0",
+    "eslint-config-standard-react": "^11.0.1",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jest": "^26.1.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-testing-library": "^5.0.5",
     "jest": "^27.5.0",
     "jest-environment-node": "^27.5.0",
     "jest-serializer-graphql": "^1.0.0",
