--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "allowSyntheticDefaultImports": true,
     "module": "commonjs",
     "target": "es6",
-    "baseUrl": "./",
+    "baseUrl": ".",
     "paths": {
       "*": ["src/*"],
       "config": ["config"],
