Upgrade RN Bootsplash to fix production build issue

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
       android:icon="@mipmap/ic_launcher"
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
-      android:theme="@style/AppTheme">
+      android:theme="@style/BootTheme">
       <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
       <meta-data android:name="com.facebook.sdk.ClientToken" android:value="@string/facebook_client_token"/>
       <activity
@@ -27,16 +27,12 @@
         android:exported="true"
         android:launchMode="singleTask"
         android:windowSoftInputMode="adjustResize">
-      </activity>
-      <!-- react-native-boot-splash  -->
-      <activity
-        android:name="com.zoontek.rnbootsplash.RNBootSplashActivity"
-        android:theme="@style/BootTheme"
-        android:launchMode="singleTask">
+        <!-- react-native-bootsplash -->
         <intent-filter>
           <action android:name="android.intent.action.MAIN" />
           <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
+      </activity>
         <!-- Deep linking intent-filter moved from MainActivity to react-native-boot-splash as per setup instructions -->
         <intent-filter>
           <action android:name="android.intent.action.VIEW" />
