--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "react-native": "^0.67.4",
     "react-native-autocomplete-input": "^3.5.0",
     "react-native-background-timer": "^2.4.1",
-    "react-native-bootsplash": "^3.2.4",
+    "react-native-bootsplash": "4.1.3",
     "react-native-confirmation-code-field": "^7.3.0",
     "react-native-date-picker": "^4.1.3",
     "react-native-device-info": "^8.4.9",
