--- a/ios/Gemfile
+++ b/ios/Gemfile
@@ -1,4 +1,8 @@
 # NOTE: Best to install Ruby via Homebrew for Mac M1 (https://stackoverflow.com/a/66556339)
-source "https://rubygems.org"
-gem "fastlane"
-gem "cocoapods", "1.11.0"
+source 'https://rubygems.org'
+
+# You may use http://rbenv.org/ or https://rvm.io/ to install and use this version
+ruby '2.7.5'
+
+gem 'fastlane'
+gem 'cocoapods', '~> 1.11', '>= 1.11.2'
