--- a/package.json
+++ b/package.json
@@ -34,52 +34,51 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/picker": "^1.8.1",
     "@react-native-google-signin/google-signin": "^7.0.4",
-    "@react-navigation/bottom-tabs": "^6.2.0",
-    "@react-navigation/drawer": "^6.3.1",
-    "@react-navigation/elements": "^1.3.1",
-    "@react-navigation/material-top-tabs": "^6.1.1",
-    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/drawer": "^6.5.0",
+    "@react-navigation/elements": "^1.3.6",
+    "@react-navigation/material-top-tabs": "^6.3.0",
+    "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.1.1",
-    "@sentry/react-native": "^3.2.13",
+    "@sentry/react-native": "^3.4.3",
     "graphql": "^16.3.0",
     "graphql-tag": "^2.12.6",
-    "html-entities": "^2.3.2",
+    "html-entities": "^2.3.3",
     "hylo-shared": "4.1.0-beta.15",
     "lodash": "^4.17.21",
-    "mixpanel-react-native": "^1.3.7",
+    "mixpanel-react-native": "^1.5.0",
     "moment-timezone": "^0.5.37",
     "node-html-markdown": "^1.1.3",
     "path-to-regexp": "^6.2.0",
     "prop-types": "^15.8.1",
     "query-string": "^7.1.1",
     "re-reselect": "^4.0.0",
-    "react": "17.0.2",
-    "react-native": "^0.67.4",
-    "react-native-autocomplete-input": "^3.5.0",
+    "react": "18.1.0",
+    "react-native": "0.70.3",
     "react-native-autoheight-webview": "^1.6.4",
     "react-native-background-timer": "^2.4.1",
-    "react-native-bootsplash": "4.1.3",
-    "react-native-confirmation-code-field": "^7.3.0",
-    "react-native-date-picker": "^4.1.3",
-    "react-native-device-info": "^8.4.9",
-    "react-native-document-picker": "^8.0.0",
+    "react-native-bootsplash": "4.3.2",
+    "react-native-confirmation-code-field": "^7.3.1",
+    "react-native-date-picker": "^4.2.5",
+    "react-native-device-info": "^10.2.1",
+    "react-native-document-picker": "^8.1.1",
     "react-native-fbsdk-next": "^4.6.0",
-    "react-native-geolocation-service": "^5.3.0-beta.4",
-    "react-native-gesture-handler": "^1.10.3",
-    "react-native-image-picker": "^4.7.3",
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-gesture-handler": "~2.7.1",
+    "react-native-image-picker": "^4.10.0",
     "react-native-keyboard-spacer": "^0.4.1",
-    "react-native-linear-gradient": "^2.5.6",
-    "react-native-onesignal": "^4.3.7",
-    "react-native-pager-view": "^5.4.15",
+    "react-native-linear-gradient": "^2.6.2",
+    "react-native-onesignal": "^4.4.1",
+    "react-native-pager-view": "^6.0.1",
     "react-native-picker-select": "^8.0.4",
     "react-native-prompt-android": "^1.1.0",
-    "react-native-reanimated": "2.7.0",
+    "react-native-reanimated": "2.11.0",
     "react-native-render-html": "^6.3.4",
     "react-native-restart": "^0.0.24",
-    "react-native-root-toast": "^3.3.0",
-    "react-native-safe-area-context": "^4.2.4",
-    "react-native-screens": "^3.13.1",
-    "react-native-tab-view": "^3.1.1",
+    "react-native-root-toast": "^3.4.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.1",
+    "react-native-tab-view": "^3.3.0",
     "react-native-triangle": "^0.0.9",
     "react-native-url-polyfill": "^1.3.0",
     "react-native-vector-icons": "^7.1.0",
@@ -100,15 +99,15 @@
     "@babel/eslint-parser": "^7.17.0",
     "@babel/runtime": "^7.17.2",
     "@react-native-community/eslint-config": "^3.0.1",
-    "@react-navigation/devtools": "^6.0.5",
+    "@react-navigation/devtools": "^6.0.10",
     "@testing-library/jest-native": "^4.0.4",
-    "@testing-library/react-native": "^9.0.0",
+    "@testing-library/react-native": "9.1",
     "babel-jest": "^27.5.1",
     "babel-plugin-inline-dotenv": "^1.6.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-remove-style": "^0.1.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-inline-environment-variables": "^0.4.3",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "babel-plugin-transform-runtime": "^6.23.0",
     "eslint": "7.32.0",
@@ -116,29 +115,29 @@
     "eslint-config-standard": "^16.0.3",
     "eslint-config-standard-jsx": "^10.0.0",
     "eslint-config-standard-react": "^11.0.1",
-    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "^26.1.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-testing-library": "^5.0.5",
+    "eslint-plugin-promise": "^6.1.0",
+    "eslint-plugin-react": "^7.31.10",
+    "eslint-plugin-testing-library": "^5.7.2",
     "jest": "^27.5.0",
     "jest-environment-node": "^27.5.0",
     "jest-serializer-graphql": "^1.0.0",
     "jest-watch-typeahead": "^1.0.0",
-    "metro-react-native-babel-preset": "^0.67.0",
+    "metro-react-native-babel-preset": "^0.72.3",
     "msw": "^0.38.1",
     "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
-    "react-native-clean-project": "^4.0.0",
+    "react-native-clean-project": "^4.0.1",
     "react-native-version": "^4.0.0",
-    "react-test-renderer": "17.0.2",
+    "react-test-renderer": "18.2.0",
     "redux-logger": "^3.0.6",
     "remote-redux-devtools": "^0.5.16",
     "reselect-tools": "^0.0.7",
     "standard": "^16.0.4",
-    "timezone-mock": "^1.3.0",
-    "uri-scheme": "^1.0.112",
+    "timezone-mock": "^1.3.4",
+    "uri-scheme": "^1.0.120",
     "validator": "^8.0.0"
   },
   "jest": {
