Fix for Android release signing

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -243,9 +243,11 @@ android {
             signingConfig signingConfigs.debug
         }
         release {
-            // Caution! In production, you need to generate your own keystore file.
-            // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            // NOTE below is default from React Native. We are not yet using 
+            // Google auto-signed releases.
+            // // Caution! In production, you need to generate your own keystore file.
+            // // see https://reactnative.dev/docs/signed-apk-android.
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
