Tune Android AppLinks

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -33,19 +33,15 @@
           <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
         <!-- Deep linking intent-filter moved from MainActivity to react-native-boot-splash as per setup instructions -->
-        <intent-filter>
+        <intent-filter android:autoVerify="true">
           <action android:name="android.intent.action.VIEW" />
           <category android:name="android.intent.category.DEFAULT" />
           <category android:name="android.intent.category.BROWSABLE" />
           <data android:scheme="@string/link_schema" />
-          <data android:scheme="http" android:host="hylo.com" />
-          <data android:scheme="https" android:host="hylo.com" />
           <data android:scheme="http" android:host="www.hylo.com" />
           <data android:scheme="https" android:host="www.hylo.com" />
           <data android:scheme="http" android:host="staging.hylo.com" />
           <data android:scheme="https" android:host="staging.hylo.com" />
-          <data android:scheme="hyloapp" android:host="home" />
-          <data android:scheme="hyloapp" />
         </intent-filter>
       </activity>
     </application>
