Upgrade to latest React Native (0.72.4)

--- a/.gitignore
+++ b/.gitignore
@@ -27,20 +27,39 @@ ios/*.app.dSYM.zip
 ios/fastlane/report.xml
 ios/debug.xcconfig
 ios/release.xcconfig
+ios/.xcode.env.local
+
+# fastlane
+#
+# It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
+# screenshots whenever they are needed.
+# For more information about the recommended setup visit:
+# https://docs.fastlane.tools/best-practices/source-control/
 
 **/fastlane/report.xml
 **/fastlane/Preview.html
 **/fastlane/screenshots
 **/fastlane/test_output
 
+# Ruby Gems / Bundle (Fastlane related)
+
+/vendor/bundle/
+.bundle/*
+vendor/*
+*.code-workspace
+
 # Android/IntelliJ
 #
+
 build/
 .idea
 .gradle
 local.properties
 *.iml
 *.hprof
+.cxx/
+*.keystore
+!debug.keystore
 android/app/src/debug/res/values/strings.xml
 android/app/src/release/res/values/strings.xml
 
@@ -50,36 +69,18 @@ node_modules/
 npm-debug.log
 yarn-error.log
 
-# BUCK
-buck-out/
-\.buckd/
-android/app/libs
-*.keystore
-!debug.keystore
-.env
-.env.development
-.env.production
-coverage/
-
 # Google login
 google-services.json
 GoogleService-Info.plist
 
-# Ruby Gems / Bundle (Fastlane related)
-/vendor/bundle/
-.bundle/*
-vendor/*
-*.code-workspace
-
 # Bundle artifact
+
 *.jsbundle
 *.jsbundle.map
 
-# CocoaPods
+# Ruby / CocoaPods
 /ios/Pods/
-
-ios/codesigndoc_exports
-.bitrise.secrets.yml
+/vendor/bundle/
 
 # Android / Android Studio. Just in case you build the project in this foler
 android/gradle/.tmp/**
@@ -89,5 +90,16 @@ android/gradle/daemon/**
 android/gradle/native/**
 android/gradle/kotlin-profile/**
 
+# Temporary files created by Metro to check the health of the file watcher
+.metro-health-check*
+
 # expo
 .expo
+
+# env files
+.env
+.env.development
+.env.production
+
+ios/codesigndoc_exports
+.bitrise.secrets.yml
