--- a/package.json
+++ b/package.json
@@ -50,10 +50,11 @@
     "moment-timezone": "^0.5.37",
     "path-to-regexp": "^6.2.1",
     "prop-types": "^15.8.1",
+    "prettier": "^2.4.1",
     "query-string": "^7.1.1",
     "re-reselect": "^4.0.1",
-    "react": "18.1.0",
-    "react-native": "^0.70.0",
+    "react": "18.2.0",
+    "react-native": "0.72.4",
     "react-native-autoheight-webview": "^1.6.5",
     "react-native-background-timer": "^2.4.1",
     "react-native-bootsplash": "4.3.2",
@@ -73,7 +74,7 @@
     "react-native-pager-view": "^6.0.1",
     "react-native-picker-select": "^8.0.4",
     "react-native-prompt-android": "^1.1.0",
-    "react-native-reanimated": "^2.10.0",
+    "react-native-reanimated": "3.4.2",
     "react-native-render-html": "^6.1.0",
     "react-native-restart": "^0.0.24",
     "react-native-root-toast": "^3.4.0",
@@ -97,15 +98,21 @@
     "tinycolor2": "^1.4.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.6",
-    "@babel/eslint-parser": "^7.19.1",
-    "@babel/runtime": "^7.19.4",
+    "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.20.0",
+    "@babel/runtime": "^7.20.0",
+    "@babel/eslint-parser": "^7.20.0",
+    "@react-native/eslint-config": "^0.72.2",
+    "@react-native/metro-config": "^0.72.11",
+    "@tsconfig/react-native": "^3.0.0",
+    "@types/react": "^18.0.24",
+    "@types/react-test-renderer": "^18.0.0",
     "@react-native-community/eslint-config": "^3.1.0",
     "@react-navigation/devtools": "^6.0.10",
     "@rnx-kit/align-deps": "^2.2.4",
     "@testing-library/jest-native": "^5.1.2",
     "@testing-library/react-native": "11.3.0",
-    "babel-jest": "^29.2.2",
+    "babel-jest": "^29.2.1",
     "babel-plugin-inline-dotenv": "^1.7.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-remove-style": "^0.1.0",
@@ -113,7 +120,7 @@
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "eslint": "8.26.0",
+    "eslint": "8.19.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-config-standard-jsx": "^11.0.0",
@@ -124,23 +131,27 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-testing-library": "^5.9.1",
-    "jest": "^26.6.3",
+    "jest": "^29.2.1",
     "jest-environment-node": "^29.2.2",
     "jest-serializer-graphql": "^1.0.0",
     "jest-watch-typeahead": "^2.2.0",
-    "metro-react-native-babel-preset": "^0.72.1",
+    "metro-react-native-babel-preset": "0.76.8",
     "msw": "^0.47.4",
     "patch-package": "^6.5.0",
     "postinstall-postinstall": "^2.1.0",
     "react-native-clean-project": "^4.0.1",
     "react-native-version": "^4.0.0",
-    "react-test-renderer": "18.1.0",
+    "react-test-renderer": "18.2.0",
     "redux-logger": "^3.0.6",
     "reselect-tools": "^0.0.7",
     "standard": "^17.0.0",
     "timezone-mock": "^1.3.4",
+    "typescript": "4.8.4",
     "uri-scheme": "^1.0.120",
     "validator": "^13.7.0"
+  },
+  "engines": {
+    "node": ">=16"
   },
   "jest": {
     "preset": "@testing-library/react-native",
