Add join questions, agreements and suggested skills to Group Welcome

--- a/.gitignore
+++ b/.gitignore
@@ -101,5 +101,7 @@ android/gradle/kotlin-profile/**
 .env.development
 .env.production
 
+.vscode/settings.json
+
 ios/codesigndoc_exports
 .bitrise.secrets.yml
