--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "graphql-tag": "^2.12.6",
     "html-entities": "^2.3.3",
     "hylo-shared": "5.2.5",
+    "i18next": "^22.0.5",
     "lodash": "^4.17.21",
     "mixpanel-react-native": "^2.3.1",
     "moment-timezone": "^0.5.37",
@@ -59,6 +60,7 @@
     "query-string": "^7.1.1",
     "re-reselect": "^4.0.1",
     "react": "18.2.0",
+    "react-i18next": "^13.0.0",
     "react-native": "0.72.4",
     "react-native-autoheight-webview": "^1.6.5",
     "react-native-background-timer": "^2.4.1",
